# TaskTracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_USAGE_GUIDE.md  DEVELOPMENT.md  Dockerfile  README.md  bash.exe.stackdump  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  provision.yml
.playwright-mcp/: page-2026-04-24T13-52-43-978Z.yml  page-2026-05-04T13-38-55-582Z.yml
config/: asgi.py  renderers.py  settings.py  urls.py
core/: base.py  models.py  org_utils.py  pagination.py  permissions.py  realtime.py  serializers.py  test_menu_permissions.py  urls.py  views.py
core/attendance/: admin.py  apps.py  matrix.py  models.py  serializers.py  test_employee_access.py  test_matrix.py  tests.py  views.py
core/audit/: apps.py  models.py  serializers.py  views.py
core/backup/: urls.py  views.py
core/budget/: apps.py  models.py  tests.py
core/chat/: admin.py  apps.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  urls.py  views.py
core/conveyance/: admin.py  apps.py  models.py  recurrence.py  serializers.py  tests.py  urls.py  views.py
core/costing/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/employees/: admin.py  apps.py  models.py  serializers.py  test_employee_access.py  tests.py  urls.py  views.py
core/filestore/: signed_url.py  urls.py  validators.py  views.py
core/gcal/: README.md  admin.py  apps.py  models.py  serializers.py  services.py  state.py  tests.py  urls.py  views.py
core/growth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/holidays/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/invoices/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/kaizen/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/leads/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/leave/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  tests.py  urls.py  views.py
core/masters/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
core/notices/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
core/pace/: admin.py  apps.py  models.py  serializers.py  tests.py  tests_migrations.py  urls.py  views.py
core/settings_app/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/tasks/: admin.py  apps.py  models.py  serializers.py  services.py  test_compdate_persistence.py  tests.py  (+3 more)
deploy/: backup.sh  crontab.example  entrypoint.sh  nginx.conf.example
scripts/: django-check.js  django-migrations-check.js  eslint-check.js  mypy-check.js  pyright-check.js  tsc-check.js  verify_phase1_tasks_1_to_5.py  verify_task15.py  verify_task6.py
supabase_migration/: 1_export_supabase_schema.py  2_export_local_schema.py  3_import_data.py  commands.md  mapping.json.example  supabase_data.xlsx
users/: admin.py  apps.py  backends.py  menu_catalog.py  menu_seed.py  models.py  signals.py  test_menu_catalog.py  test_menu_rights.py  test_menu_rights_migration.py  test_user_rights_api.py  tests.py  urls.py  views.py
(+683 files in other folders)
