[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501", "F401"]

[project]
name = "tasktracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "django-cors-headers>=4.4",
    "django-environ>=0.11",
    "gunicorn>=23.0",
    "pre-commit>=4.5.1",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
